# goya-fs

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  onekeybuild.sh
src/chunkserver/: chunkserver_impl.cc  chunkserver_impl.h  chunkserver_main.cc
src/client/: fs_client.cc
src/common/: flags.cc  rpc_wrapper.h
src/master/: master_main.cc  masterserver_impl.cc  masterserver_impl.h
src/proto/: chunkserver.proto  file.proto  masterserver.proto
src/sdk/: file_client.h  file_client_impl.cc  file_client_impl.h
